semi-cool fix for too long strings that works in iOs Safari.

--- a/shell/src/shared/css/tailwind-output.css
+++ b/shell/src/shared/css/tailwind-output.css
@@ -3826,6 +3826,9 @@ body {
 }
 */
 
+.truncateThis {
+  overflow: hidden;
+}
 .truncateThis:before {
   content: "";
   width: 100%;
